--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -1,3 +1,31 @@
 @tailwind base;
+
+body {
+  @apply text-white bg-gray-800;
+}
+p {
+  @apply py-2;
+}
+pre {
+  @apply p-3 bg-gray-700 rounded overflow-x-auto;
+}
+h1 {
+  @apply text-4xl;
+}
+h2 {
+  @apply text-3xl py-3 border-b border-gray-700;
+}
+h3 {
+  @apply text-2xl p-2 border-b border-gray-700;
+}
+a {
+  @apply underline;
+}
+img {
+  display: block;
+  margin: auto;
+  max-width: 100%;
+}
+
 @tailwind components;
 @tailwind utilities;
